[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://dial.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="dial" type="Sprite" parent="."]
position = Vector2( 400, 200 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="combo_term1" type="RichTextLabel" parent="."]
margin_left = 311.0
margin_top = 32.0
margin_right = 351.0
margin_bottom = 72.0
text = "00"

[node name="combo_term2" type="RichTextLabel" parent="."]
margin_left = 390.0
margin_top = 31.0
margin_right = 430.0
margin_bottom = 71.0
text = "00"

[node name="combo_term3" type="RichTextLabel" parent="."]
margin_left = 465.0
margin_top = 32.0
margin_right = 505.0
margin_bottom = 72.0
text = "00"
